stats, github links

--- a/src/projects/cukiernia/project.mdx
+++ b/src/projects/cukiernia/project.mdx
@@ -6,8 +6,7 @@ date: 2021-10-11
 category: HTML&CSS
 tags: ["html", "scss", "grid"]
 link: https://ascislowska.github.io/cukiernia/
-
+github: https://github.com/ascislowska/cukiernia
 ---
 
 Projekt osobisty. Strona stworzona w HTML i SASS(SCSS).
-
