--- a/src/projects/fryzjer/project.mdx
+++ b/src/projects/fryzjer/project.mdx
@@ -6,8 +6,7 @@ date: 2021-12-11
 category: HTML&CSS
 tags: ["html", "css", "flexbox"]
 link: https://ascislowska.github.io/zaklad/
+github: https://github.com/ascislowska/zaklad
 ---
 
-Strona salonu fryzjerskiego - projekt osobisty. Strona stworzona w HTML, CSS i JS, bez wykorzystania żadnych bibliotek. 
-
-
+Strona salonu fryzjerskiego - projekt osobisty. Strona stworzona w HTML, CSS i JS, bez wykorzystania żadnych bibliotek.
