--- a/src/projects/photographer/project.mdx
+++ b/src/projects/photographer/project.mdx
@@ -6,8 +6,7 @@ date: 2022-11-07
 category: Gatsby
 tags: ["gatsby", "API", "grid", "animation"]
 link: https://moments-catchers.netlify.app
+github: https://github.com/ascislowska/photographer-portfolio
 ---
 
 Portfolio fotografa. Błyskawiczne wczytywanie zdjęć wysokiej jakości, autorskie animacje i sondaż aktualizowany w czasie rzeczywistym. Treść strony jest zarządzana z panelu Airtable.
-
-
