--- a/src/projects/todoApp/project.mdx
+++ b/src/projects/todoApp/project.mdx
@@ -6,6 +6,7 @@ date: 2022-11-15
 category: React&TS
 tags: ["React", "typescript", "scss"]
 link: https://todolist-ascislowska.vercel.app/
+github: https://github.com/ascislowska/todolist
 ---
 
 Prosta lista zadań dostępna z przeglądarki.
