--- a/src/projects/fbud/project.mdx
+++ b/src/projects/fbud/project.mdx
@@ -1,13 +1,12 @@
 ---
-title: Firma Budowlana
+title: Construction company
 slug: fbud
 image: ./images/main.png
 date: 2022-06-01
 category: Wordpress
 tags: ["Wordpress", "css", "js"]
 link: https://fbud.com.pl/
-
 ---
 
-Strona Firmy Budowlanej Wojciech Chełchowski, Barbara Chełchowska s.c. Zindywidualizowany szablon Wordpress, własne animacje na stronie głównej. 
-
+Webpage of Fbud - Construction Company Wojciech Chełchowski, Barbara Chełchowska s.c.
+Wordpress motive with personalized CSS. JS animation at the front page.
