--- a/src/projects/fryzjer/project.mdx
+++ b/src/projects/fryzjer/project.mdx
@@ -1,6 +1,6 @@
 ---
-title: Zakład fryzjerski
-slug: zakład-fryzjerski
+title: Old style hairdresser
+slug: hairdresser
 image: ./images/main.png
 date: 2021-12-11
 category: HTML&CSS
@@ -9,4 +9,4 @@ link: https://ascislowska.github.io/zaklad/
 github: https://github.com/ascislowska/zaklad
 ---
 
-Strona salonu fryzjerskiego - projekt osobisty. Strona stworzona w HTML, CSS i JS, bez wykorzystania żadnych bibliotek.
+First personal project developed with HTML, CSS and JS. No additional libraries.
