--- a/src/projects/todoApp/project.mdx
+++ b/src/projects/todoApp/project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Lista zadań
+title: To do application
 slug: todoList
 image: ./images/main.png
 date: 2022-11-15
@@ -9,5 +9,4 @@ link: https://todolist-ascislowska.vercel.app/
 github: https://github.com/ascislowska/todolist
 ---
 
-Prosta lista zadań dostępna z przeglądarki.
-My first project with typescript
+My first project with typescript. It plays sounds!
