--- a/src/projects/cukiernia/project.mdx
+++ b/src/projects/cukiernia/project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Cukiernia
+title: Cakes
 slug: cukiernia
 image: ./images/main.png
 date: 2021-10-11
@@ -9,4 +9,4 @@ link: https://ascislowska.github.io/cukiernia/
 github: https://github.com/ascislowska/cukiernia
 ---
 
-Projekt osobisty. Strona stworzona w HTML i SASS(SCSS).
+Personal project developed with HTML and SCSS.
