--- a/src/projects/photographer/project.mdx
+++ b/src/projects/photographer/project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Portfolio fotografa
+title: Photographer portfolio
 slug: photographer-portfolio
 image: ./images/main.png
 date: 2022-11-07
@@ -9,4 +9,4 @@ link: https://moments-catchers.netlify.app
 github: https://github.com/ascislowska/photographer-portfolio
 ---
 
-Portfolio fotografa. Błyskawiczne wczytywanie zdjęć wysokiej jakości, autorskie animacje i sondaż aktualizowany w czasie rzeczywistym. Treść strony jest zarządzana z panelu Airtable.
+Photographer portfolio developed with Gatsvt. Fast loading of high quality photos, my own animations and live questionnare. Content managment from Airtable.
