--- a/src/projects/slot/project.mdx
+++ b/src/projects/slot/project.mdx
@@ -1,13 +1,12 @@
 ---
-title: Charts
-slug: charts
+title: Slot machine
+slug: slot
 image: ./images/main.png
-date: 2023-06-07
-category: React&TS
-tags: ["React", "typescript", "Recharts", "Bulma"]
+date: 2023-04-29
+category: React&PixiJs
+tags: ["React", "typescript", "mobX", "PixiJS",  "GSAP"]
 link: https://ascislowska.github.io/europeanElections/
 github: https://github.com/ascislowska/europeanElections
 ---
 
-Data visualisations created with recharts library. The data comes from the European Parliament website. This is a personal project developed for learning purposes. I've used three types or charts from Recharts library in form of personalized reusable components. The user can filter the data, select units for each chart or even switch between different chart types.
-Everything is styled with Bulma (with few customizations).
+My Typescript Bootcamp final project. It consists of two parts: UI and the actual game. UI was created with React and mobX and styled with css. The main part of the game consists of typescript objects animated with PixiJS and GSAP. 
